--- a/ARSHA-master/testportfolio/Fstorestyle.css
+++ b/ARSHA-master/testportfolio/Fstorestyle.css
@@ -1,6 +1,6 @@
  body {
             margin-top: 0%;
-            margin-bottom: 3rem;
+            margin-bottom:0%;
         }
 .main-category{
     background-color: #f8f4f6;
@@ -9,3 +9,73 @@
     margin-bottom: 3rem;
     margin-top: 4rem;
 }
+
+ /* brand-carousel */
+
+        .brandcarousel-container {
+            background-color: #f5f6f8;
+            overflow: hidden;
+            padding: 0;
+            height: 3rem;
+            background-color: #8c0d4f;
+            flex-direction: column;
+
+        }
+
+        .brandcarousel-track {
+            justify-content: center;
+            align-items: center;
+            justify-items: center;
+            display: flex;
+            /* animation: slide 20s steps(4) ; */
+            animation: stepScroll 3s steps(4) infinite;
+            gap: 5rem;
+            font-size: 24px;
+            color: white;
+            margin-bottom: 1rem;
+            overflow: hidden;
+        }
+
+        .brandcarousel-track .vertical {
+            margin: 0;
+            padding: 0;
+        }
+
+        .brandcarousel-track p {
+            margin: 0;
+            padding: 0.3rem 0;
+            height: 3rem;
+            line-height: 3rem;
+            font-size: 18px;
+        }
+
+
+        .brandcarousel-track img {
+            height: 38px;
+            transition: all 0.1s ease-in-out;
+        }
+
+        .brandcarousel-track img:hover {
+            transform: scale(1.05);
+            cursor: pointer;
+        }
+
+        .brandcarousel-container:hover .brandcarousel-track {
+            animation-play-state: paused;
+        }
+
+        @keyframes stepScroll {
+            0% {
+                transform: translateY(0);
+            }
+
+            100% {
+                transform: translateY(-160%);
+            }
+        }
+
+        .brand-wrapper {
+            overflow: hidden;
+            cursor: pointer;
+            /* pause on hover */
+        }
