--- a/testportfolio/Fstorestyle.css
+++ b/testportfolio/Fstorestyle.css
@@ -151,8 +151,61 @@
  }
 
  /* category cards */
- .main-category{
-    background-color: #f8f4f6;
-    padding-top: 3rem;
-    padding-bottom: 3rem;
+ .main-category {
+     background-color: #f8f4f6;
+     padding-top: 3rem;
+     padding-bottom: 3rem;
  }
+
+ /* Best Seller  */
+ .seller-btn {
+     font-size: 1.5rem;
+     color: #570808;
+     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+     text-decoration: none;
+
+ }
+ /* apply hover */
+ .product-action i {
+     position: relative;
+     background-color: #efedee;
+     width: 3.6rem;
+     height: 3.6rem;
+     border-radius: 50%;
+     align-items: center;
+     justify-self: center;
+     color: #8c0d4f;
+     z-index: 1;
+     display: flex;
+     flex-direction: column;
+     margin-bottom: 2rem;
+     bottom: 24rem;
+     left: 7rem;
+     justify-content: center;
+     text-decoration-style: none;
+    
+}
+
+.price-rating p{
+    font-size: 26px;
+    color: #8c0d4f;
+    font-weight: 700;
+   
+}
+
+
+/* product list cards */
+
+.product-card{
+    border: 1px solid whitesmoke;
+    box-shadow: 1px 2px 6px rgba(213, 212, 212, 0.538);
+    border-radius: 18px;
+    -webkit-border-radius: 18px;
+    -moz-border-radius: 18px;
+    -ms-border-radius: 18px;
+    -o-border-radius: 18px;
+}
+
+.product-body{
+    padding: 1rem;
+}
