--- a/testportfolio/Fstorestyle.css
+++ b/testportfolio/Fstorestyle.css
@@ -4,6 +4,7 @@
  }
 
  #navbarNavAltMarkup {
+
      font-size: 14px;
      gap: 2rem;
      align-items: center;
@@ -11,6 +12,81 @@
      justify-self: center;
 
  }
+
+ #home-navbar {
+     gap: 1.5rem;
+     font-size: 21px;
+
+ }
+
+ .nav-link {
+     color: black;
+ }
+
+ .nav-link:hover {
+     color: #8c0d4f;
+     text-decoration: underline;
+
+ }
+
+
+
+ /* Dropdown with submenu */
+ /* Style the dropdown menu */
+ .dropdown {
+     position: relative;
+     display: inline-block;
+ }
+
+ /* Style the dropdown menu items */
+ .dropdown-content {
+     display: none;
+     position: absolute;
+     background-color: #f9f9f9;
+     min-width: 160px;
+     z-index: 1;
+ }
+
+ /* Style the dropdown menu links */
+ .dropdown-content a {
+     color: black;
+     padding: 12px 16px;
+     text-decoration: none;
+     display: block;
+ }
+
+ /* Style the dropdown menu links on hover */
+ .dropdown-content a:hover {
+     background-color: #f1f1f1;
+ }
+
+ /* Show the dropdown menu when hovering over the dropdown */
+ .dropdown:hover .dropdown-content {
+     display: block;
+ }
+
+ /* Style the nested dropdown menu */
+ .nested-dropdown {
+     position: relative;
+ }
+
+ /* Style the nested dropdown menu items */
+ .nested-dropdown-content {
+     display: none;
+     position: absolute;
+     background-color: #f9f9f9;
+     min-width: 160px;
+     left: 100%;
+     top: 0;
+     z-index: 1;
+ }
+
+
+ /* Show the nested dropdown menu when hovering over the parent item */
+ .nested-dropdown:hover .nested-dropdown-content {
+     display: block;
+ }
+
 
  .main-category {
      background-color: #f8f4f6;
@@ -160,7 +236,7 @@
      display: flex;
      justify-content: end;
      left: 3rem;
-     bottom: 6.5rem;
+     bottom: 4.2rem;
      overflow: hidden;
  }
 
