--- a/testportfolio/Fstorestyle.css
+++ b/testportfolio/Fstorestyle.css
@@ -67,7 +67,7 @@
 
  /* Hover Effects */
  .dropdown-content a:hover {
-     background-color: #f1f1f1;
+     cursor: pointer;
  }
 
  .dropdown:hover .dropdown-content {
@@ -141,7 +141,7 @@
      color: white;
      margin-bottom: 1rem;
      overflow: hidden;
-    
+
  }
 
  .brandcarousel-track .vertical {
@@ -303,6 +303,18 @@
 
  }
 
+
+ /* small badges */
+
+ .product-badge {
+     position: relative;
+     z-index: 1;
+     top: 0%;
+     bottom: 29rem;
+
+
+ }
+
  .price-rating p {
      font-size: 26px;
      color: #8c0d4f;
@@ -313,7 +325,7 @@
 
  /* product list cards */
 
- .product-card {
+ .plist-card {
      border: 1px solid whitesmoke;
      box-shadow: 1px 2px 6px rgba(213, 212, 212, 0.538);
      border-radius: 18px;
@@ -321,8 +333,54 @@
      -moz-border-radius: 18px;
      -ms-border-radius: 18px;
      -o-border-radius: 18px;
+     z-index: 999;
  }
 
  .product-body {
      padding: 1rem;
+ }
+
+ .product-text {
+
+     color: #8c0d4f;
+     font-size: 23px;
+     font-weight: 700;
+     left: 0%;
+ }
+
+ .product-title {
+     font-family: 'Times New Roman', Times, serif;
+     font-size: 22px;
+ }
+
+ .product-title:hover {
+     color: #8c0d4f;
+ }
+
+ /* sale/newbadge */
+ .plist-badge {
+     position: relative;
+     z-index: 2;
+     top: 1rem;
+     left: 1rem;
+
+ }
+
+ .add-cart {
+     position: relative;
+     z-index: 3;
+     bottom: 10rem;
+     background-color: #8c0d4f;
+     border-radius: 30px;
+     width: 14rem;
+     height: 3rem;
+     font-size: 18px;
+ }
+
+ #productC {
+    position: relative;
+     z-index: 3;
+     align-items: center;
+     justify-items: center;
+     background-color: #8c0d4f;
  }
