--- a/FashinstoreClone/Fstorestyle.css
+++ b/FashinstoreClone/Fstorestyle.css
@@ -1,13 +1,15 @@
  body {
-     background-color: #f8f4f6;
+     /* background-color: #f8f4f6; */
      margin-top: 0%;
      margin-bottom: 0%;
  }
-/* to remove blue underline from buttons */
+
+ /* to remove blue underline from buttons */
  a {
-  text-decoration: none;
-  color: inherit; /* Prevents default blue color */
-}
+     text-decoration: none;
+     color: inherit;
+     /* Prevents default blue color */
+ }
 
 
  #navbarNavAltMarkup {
@@ -270,14 +272,15 @@
  /* category cards */
 
  .category-cards {
-
+     background-color: #f8f4f6;
      padding-bottom: 3rem;
+     padding-top: 3rem;
  }
 
  .category-card {
      position: relative;
-    overflow: hidden;
-    
+     overflow: hidden;
+
  }
 
  .category-link {
@@ -285,7 +288,7 @@
      top: 80%;
      left: 50%;
      transform: translate(-50%, -50%);
-     /* Perfect center */
+
 
      z-index: 2;
      background-color: white;
@@ -323,7 +326,7 @@
      font-weight: 700;
      font-size: .95rem;
      border: 0;
-     background-color: transparent;
+     /* background-color: transparent; */
 
  }
 
@@ -349,89 +352,156 @@
      -moz-transform: scale(1.08);
      -ms-transform: scale(1.08);
      -o-transform: scale(1.08);
-}
+ }
 
  /* Best Seller  */
-  .sellercard {
-            background-color: white;
-            width: 16rem;
-            height: 30rem;
-            border-radius: .95rem;
-        }
+ .seller-main {
+     background-color: white;
+     padding-top: 3rem;
+     padding-bottom: 3rem;
+     padding-left: 5rem;
+     padding-right: 5rem;
+     justify-items: center;
+ }
 
-        .seller-btn {
-            font-size: 1rem;
-            color: #570808;
-            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-            text-decoration: none;
-
-        }
-
-        /* apply hover */
-
-        
-
-        .product-action i {
-            position: relative;
-            background-color: #efedee;
-            width: 3rem;
-            height: 3rem;
-            border-radius: 50%;
+        .seller-heading{
             align-items: center;
-            justify-self: center;
-            color: #8c0d4f;
-            z-index: 1;
-            display: flex;
-            flex-direction: column;
-            margin-bottom: 2rem;
-            top: 4rem;
-            left: 0;
-            justify-content: center;
-            visibility: hidden;
-            opacity: 0;
-            transition: 0.3s ease-in-out;
-
-        }
-
-        .product-action i:hover {
-            background-color: #8c0d4f;
-            color: white;
-            border-radius: 50%;
-            padding: 5px;
-        }
-        .sellercard-body{
-            overflow: hidden;
-        }
-        .sellercard-body img{
-            position: relative;
-           height: 20rem;
-           width: 20rem;
-           right: 2rem;
-         
-        }
-        .sellercard:hover .product-action i {
-            visibility: visible;
-            opacity: 1;
         }
 
 
-        /* small badges */
+ .sellercard {
+     background-color: white;
+     width: 16.2rem;
+     height: 30rem;
+     border-radius: .95rem;
+ }
 
-        .product-badge {
-            position: relative;
-            z-index: 1;
-            top: 0%;
-            bottom: 29rem;
+ .sellercard-body {
+     padding-left: 1rem;
+ }
+
+ .sellercard-title {
+     padding-top: .85rem;
+     font-size: 1rem;
+     color: gray;
+     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+ }
+
+ .seller-btn {
+     font-size: 1.08rem;
+     color: #000000;
+     font-family: quicksand;
+     font-weight: 500;
+     text-decoration: none;
+
+ }
+
+ .seller-btn:hover {
+     color: #8c0d4f;
+ }
+
+ .price-rating {
+     gap: 3rem;
+ }
+
+ .price-rating p {
+     font-size: 18px;
+     color: #8c0d4f;
+     font-weight: 700;
+     row-gap: 2rem;
+
+ }
 
 
-        }
+ /* small badges */
 
-        .price-rating p {
-            font-size: 26px;
-            color: #8c0d4f;
-            font-weight: 700;
+ .product-badge {
+     position: relative;
+     z-index: 1;
+     top: 0%;
+     bottom: 29rem;
 
-        }
+
+ }
+
+
+
+ /* apply hover */
+
+ .product-action i {
+     position: relative;
+     background-color: #efedee;
+     width: 3rem;
+     height: 3rem;
+     border-radius: 50%;
+     align-items: center;
+     justify-self: center;
+     color: #8c0d4f;
+     z-index: 1;
+     display: flex;
+     flex-direction: column;
+     margin-bottom: 2rem;
+     top: 4rem;
+     left: 0;
+     justify-content: center;
+     visibility: hidden;
+     opacity: 0;
+     transition: 0.3s ease-in-out;
+
+ }
+
+ .product-action i:hover {
+     background-color: #8c0d4f;
+     color: white;
+     border-radius: 50%;
+     padding: 5px;
+ }
+
+ .sellercard-body {
+     overflow: hidden;
+ }
+
+ .sellercard-body img {
+     position: relative;
+     height: 20rem;
+     width: 20rem;
+     right: 2rem;
+
+ }
+
+ .product-img {
+     position: relative;
+     height: 20rem;
+     width: 20rem;
+     overflow: hidden;
+     /* transition: all 0.4 ease ;
+     -webkit-transition: all 0.4 ease ;
+     -moz-transition: all 0.4 ease ;
+     -ms-transition: all 0.4 ease ;
+     -o-transition: all 0.4 ease ; */
+}
+
+ .product-img img {
+     position: absolute;
+     width: 100%;
+     height: 100%;
+     /* delay in display hover in js */
+     transition: opacity 0.5s ease 0.1s, transform 0.6s ease;
+
+}
+ /* img scale */
+ .main-img {
+  transform: scale(1);
+  /*zoomout*/
+}
+
+.hover-img {
+  opacity: 0;
+  transform: scale(1.05); /* zoom in slightly */
+}
+
+
+
  /* product list cards */
 
  .plist-card {
@@ -447,6 +517,7 @@
 
  .product-body {
      padding: 1rem;
+     height: 8rem;
  }
 
  .product-text {
@@ -484,12 +555,4 @@
      width: 14rem;
      height: 3rem;
      font-size: 18px;
- }
-
- #productC {
-     position: relative;
-     z-index: 3;
-     align-items: center;
-     justify-items: center;
-     background-color: #8c0d4f;
  }
