Refines product list and hover interactions
Optimizes product card design by enhancing hover effects and image transitions. Introduces new styles for badges and adjusts layout for improved usability. Removes unused categories and simplifies structure for maintainability.

--- a/FashinstoreClone/Fstorestyle.css
+++ b/FashinstoreClone/Fstorestyle.css
@@ -326,7 +326,7 @@
      font-weight: 700;
      font-size: .95rem;
      border: 0;
-     /* background-color: transparent; */
+     background-color: transparent;
 
  }
 
